force-app/main/default/objects/vf_Staff__c/vf_Staff__c.object-meta.xml
<CustomObject>
    <label>Staff</label>
    <pluralLabel>Staff</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Staff Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to store staff member information</description>
</CustomObject>