force-app/main/default/objects/vf_Staff__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <description>Staff member's email address</description>
    <inlineHelpText>Email address of the staff member</inlineHelpText>
</CustomField>