force-app/main/default/objects/vf_Staff__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
    <description>Staff member's phone number</description>
    <inlineHelpText>Phone number of the staff member</inlineHelpText>
</CustomField>