force-app/main/default/objects/vf_Staff__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
    <description>Staff member's role in the organization</description>
    <inlineHelpText>Role or position of the staff member within the organization</inlineHelpText>
</CustomField>